--- a/theme/styles/prism.css
+++ b/theme/styles/prism.css
@@ -6,10 +6,11 @@
  * Added by Souvik Mandal [@SimpleIndian]
  */
 
-code[class*="language-"],
-pre[class*="language-"] {
+code[class*='language-'],
+pre[class*='language-'] {
   color: #d6deeb;
-  font-family: "Victor Mono", Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
+  font-family: 'Victor Mono', Consolas, Monaco, 'Andale Mono',
+    'Ubuntu Mono', monospace;
   text-align: left;
   white-space: pre;
   word-spacing: normal;
@@ -28,43 +29,43 @@ pre[class*="language-"] {
   hyphens: none;
 }
 
-pre[class*="language-"]::-moz-selection,
-pre[class*="language-"] ::-moz-selection,
-code[class*="language-"]::-moz-selection,
-code[class*="language-"] ::-moz-selection {
+pre[class*='language-']::-moz-selection,
+pre[class*='language-'] ::-moz-selection,
+code[class*='language-']::-moz-selection,
+code[class*='language-'] ::-moz-selection {
   text-shadow: none;
   background: rgba(29, 59, 83, 0.99);
 }
 
-pre[class*="language-"]::selection,
-pre[class*="language-"] ::selection,
-code[class*="language-"]::selection,
-code[class*="language-"] ::selection {
+pre[class*='language-']::selection,
+pre[class*='language-'] ::selection,
+code[class*='language-']::selection,
+code[class*='language-'] ::selection {
   text-shadow: none;
   background: rgba(29, 59, 83, 0.99);
 }
 
 @media print {
-  code[class*="language-"],
-  pre[class*="language-"] {
+  code[class*='language-'],
+  pre[class*='language-'] {
     text-shadow: none;
   }
 }
 
 /* Code blocks */
-pre[class*="language-"] {
+pre[class*='language-'] {
   padding: 1em;
   margin: 0.5em 0;
   overflow: auto;
 }
 
-:not(pre) > code[class*="language-"],
-pre[class*="language-"] {
+:not(pre) > code[class*='language-'],
+pre[class*='language-'] {
   color: white;
   background: #011627;
 }
 
-:not(pre) > code[class*="language-"] {
+:not(pre) > code[class*='language-'] {
   padding: 0.1em;
   border-radius: 0.3em;
   white-space: normal;
@@ -155,4 +156,11 @@ pre[class*="language-"] {
 
 .token.italic {
   font-style: italic;
+}
+
+:not(pre) > code {
+  font-size: 0.9em;
+  background: rgba(29, 59, 83, 0.99);
+  @apply font-light py-0.5 rounded;
+  padding: 0 0.3em 0 0.3em;
 }
