--- a/theme/styles/layouts.css
+++ b/theme/styles/layouts.css
@@ -1,7 +1,36 @@
+:root {
+  /* default theme color */
+  /* can be overridden by uses `themeConfig` option */
+  --slidev-theme-primary: #253889ff;
+  --slidev-theme-secondary: #f5487fff;
+}
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--slidev-theme-secondary) var(--slidev-theme-primary);
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 15px;
+  height: 10px;
+}
+
+*::-webkit-scrollbar-track {
+  background: var(--slidev-theme-primary);
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--slidev-theme-secondary);
+  border-radius: 14px;
+  border: 3px solid var(--slidev-theme-primary);
+}
+
 .slidev-layout {
 
   pre {
-    box-shadow: 0 0 10px #9ecaed;
+    box-shadow: 0 0 10px #253889ff;
   }
 
   ul {
